# transcribe-ui

./: .gitignore  package-lock.json  package.json  parse-output.py  postcss.config.js  pyproject.toml  transcribe-test.py  tsconfig.json  webpack.config.js
lambda/pre-signed-url/: README.md  samconfig.toml  template.yaml
lambda/pre-signed-url/pre-signed/: app.py
lambda/trigger-S3/: README.md  samconfig.toml  template.yaml
lambda/trigger-S3/notifycate/: app.py  slack.py
lambda/trigger-S3/triggerS3/: app.py
src/: App.css  App.tsx  fileUpLoad.tsx  index.html  index.tsx  transcript.ts
tests/: test_mojimoji.py
tf/: aws.tf  s3.tf
