[tool.poetry]
name = "mojimoji"
version = "0.1.0"
description = ""
authors = ["Shin ADACHI <shn@glucose.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.11.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
